--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "pomodoro-timer",
+  "productName": "Pomodoro Timer",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Um timer Pomodoro para produtividade",
+  "productDescription": "Aplicativo Pomodoro que ajuda a organizar seus períodos de foco e descanso.",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.11.1",
     "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-dmg": "^7.11.1",
     "@electron-forge/maker-rpm": "^7.11.1",
     "@electron-forge/maker-squirrel": "^7.11.1",
     "@electron-forge/maker-zip": "^7.11.1",
